[package]
name = "hold-migrate"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[[bin]]
name = "hold-migrate"
path = "src/main.rs"

[lib]
name = "hold_migrate"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
humansize = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sigpipe = "0.1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
